hphp/test/slow/ext_string/t81384058.php.expectf
Fatal error: request has exceeded memory limit in %s/t81384058.php on line 5
